<resources>
    <string name="app_name">InSync</string>
    <string name="fabric_api_key">98b4aaea624003eec876dae2a53a6629318ae4ac</string>
    <string name="facebook_app_id">677338939135120</string>
    <string name="parse_app_id">insync-codepath</string>
    <string name="parse_app_url">https://insync-codepath.herokuapp.com/parse/</string>
    <string name="gcm_sender_id">id:1042520388761</string>
    <string name="google_maps_api_key">AIzaSyDbTEtKd_w0Ue1hk0J7iaRoMVIaFobX50A</string>
    <string name="picovico_app_id">e8c8d24aafc64c1df9c0b6ad4f0d3570b7820e04600b92f9cecee449ae5440d8</string>
    <string name="picovico_app_secret">eece09fe894ed9f19742c15c09cc9a017ccd22d5a9a9a1865d2180560e1df6cb</string>
    <string name="start_date">Start Date</string>
    <string name="event_name">Event Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="title_activity_event_list">My Events</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="event_profile_image">Event Profile Image</string>
    <string name="message_hint">Type message…</string>
    <string name="profile_left">Left Profile Image</string>
    <string name="profile_right">Right Profile Image</string>
    <string name="username_email">Username/ Email</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="not_registered_create_account">Not registered yet? Create Account</string>
    <string name="app_logo">App Logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="where">Where?</string>
    <string name="when">When?</string>
    <string name="event_image">Event image</string>
    <string name="create">Create</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="track">Track</string>
    <string name="get_highlights">Get Highlights</string>
    <string name="get_whereabouts">Get Whereabouts</string>
    <string name="see_details">SEE DETAILS</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="don_t_have_the_code_resend">Don\'t have the code? Resend.</string>
    <string name="login">Login</string>
    <string name="x_xxx_xxx_xxxx">1-XXX-XXX-XXXX</string>
    <string name="phone_contacts">Phone Contacts</string>
    <string name="next">Next >></string>
    <string name="save_next">Add User</string>
    <string name="whereabouts">Whereabouts</string>
    <string name="gallery">Gallery</string>
    <string name="add_a_caption">Add a caption…</string>
    <string name="create_event">Create Event</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="log_in">Log In</string>
    <string name="add_attachment">Add image</string>
    <string name="invite_guests">Invite guests</string>
    <string name="tap_here_for_event_details">Tap here for event details</string>
    <string name="details">Event Details</string>
    <string name="start_date_and_time"><![CDATA[Event Start Date & Time]]></string>
    <string name="end_date_and_time"><![CDATA[Event End Date & Time]]></string>
    <string name="event_location">Event Location</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="guests">Guests</string>
    <string name="all">All</string>
    <string name="end_event">End Event</string>
    <string name="event_date_time"><![CDATA[Event Date & Time]]></string>
    <string name="highlights">Highlights</string>
    <string name="share">Share</string>
    <string name="don_t_have_the_code_sign_up">Don\'t have the code? Sign up.</string>
    <string name="add_event_details">Add event details</string>
    <string name="add_location">Add location</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title_for_the_event">Enter Title for the Event</string>
    <string name="done">Done</string>
    <string name="enter_start_date">Enter start date</string>
    <string name="event_pic">Event Pic</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="enter_end_time">Enter end time</string>
    <string name="or">OR</string>


    <string-array name="theme">
        <item>Birthday</item>
        <item>Farewell</item>
        <item>Get-together</item>
        <item>Party</item>
    </string-array>
</resources>
