<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/primary"
        android:fitsSystemWindows="true"
        android:id="@+id/svLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/ic_camera_alt_white_48px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="24dp"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                tools:targetApi="lollipop">
                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/etLoginPNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:text="@string/x_xxx_xxx_xxxx"
                        android:inputType="none"
                     />
                </android.support.design.widget.TextInputLayout>

                <!-- Code Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilLoginCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/etLoginCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/verification_code"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvPhoneLoginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/primary_light"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:padding="12dp"
                    android:text="@string/get_started" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLoginResend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:layout_marginTop="@dimen/margin24"
                android:gravity="center"
                android:text="@string/don_t_have_the_code_resend"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</layout>